--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "next": "10.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-icons": "^4.2.0",
     "react-swipeable-views": "^0.13.9",
+    "socket.io-client": "^4.1.2",
     "swr": "^0.5.5",
     "yup": "^0.32.9"
   }
